add: update files index.html, about.css, customer.css, farm.css, footer.css, header.css, offer.css, product.css, subcribe.css

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="about-organic__right">
                         <span class="general-offer general-offer--mdeia">Abouts us</span>
-                        <h2 class="subtitle about-organic__title">We Believe in Organic Foods For Strong Health</h2>
+                        <h2 class="subtitle about-organic__subtitle">We Believe in Organic Foods For Strong Health</h2>
                         <p class="about-organic__text">Welcome to the world of natural and organic. Here you can
                             discover the bounty of nature. We have grown on the principles of health, and care. We aim
                             to give our customers a healthy chemical-free meal for perfect nutrition.</p>
@@ -433,7 +433,7 @@
                                         <input id="rating-star__two-corn-offer" type="radio" class="rating-star__item"
                                             name="rating-star" value="2">
                                         <label for="rating-star__two-corn-offer" class="rating-star__label"></label>
-                                        <input id="rating-star__one-cor-offern" type="radio" class="rating-star__item"
+                                        <input id="rating-star__one-corn-offer" type="radio" class="rating-star__item"
                                             name="rating-star" value="1">
                                         <label for="rating-star__one-corn-offer" class="rating-star__label"></label>
                                     </div>
